--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>быстросъемные фильтры 15", вход-выход 3/8" для HoReCa (без крана)</td>
+                             <tr class="subcat">быстросъемные фильтры 15", вход-выход 3/8" для HoReCa (без крана)</td>
                             <td></td>
                             <td></td>
                             <td></td>
