--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ window.addEventListener('DOMContentLoaded', () => {
 <button class="btn" id="downloadXls">Скачать Excel (без фото)</button>
 <button class="btn" id="downloadPdf">Скачать PDF с фото</button>
 </div>
-</div>
+<div class="group"><input id="onlyPromoExcel" type="checkbox"/><label for="onlyPromoExcel">Только акции (Excel)</label></div></div>
 <div class="container">
 <h2>тел./факс +7 (812) 605-00-55</h2>
 <h2>e-mail: office@geizer.com, http://www.geizer.com</h2>
@@ -9384,6 +9384,51 @@ document.addEventListener('DOMContentLoaded', () => {
       showOverlay(index);
     });
   });
+});
+</script><script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script><script>
+document.addEventListener('DOMContentLoaded', () => {
+  const btnExcel = document.getElementById('downloadXls');
+  const onlyPromo = document.getElementById('onlyPromoExcel');
+
+  if (btnExcel) {
+    btnExcel.addEventListener('click', () => {
+      const table = document.querySelector('table.price');
+      if (!table) return;
+
+      // Get rows
+      const rows = Array.from(table.querySelectorAll('tbody tr'))
+        .filter(tr => tr.querySelectorAll('td').length > 0);
+
+      // Filter only promo if checkbox checked
+      let filteredRows = rows;
+      if (onlyPromo && onlyPromo.checked) {
+        filteredRows = rows.filter(tr => tr.querySelector('td.promo') && tr.querySelector('td.promo').textContent.trim() !== '');
+      }
+
+      // Build worksheet data
+      const headerCells = Array.from(table.querySelectorAll('thead th')).map(th => th.textContent.trim());
+
+      // Remove Фото column and rename акция
+      const photoIndex = headerCells.findIndex(h => h.toLowerCase().includes('фото'));
+      const promoIndex = headerCells.findIndex(h => h.toLowerCase().includes('акция'));
+      if (photoIndex !== -1) headerCells.splice(photoIndex, 1);
+      if (promoIndex !== -1) headerCells[promoIndex] = 'Акция';
+
+      const data = [headerCells];
+
+      filteredRows.forEach(tr => {
+        const tds = Array.from(tr.querySelectorAll('td')).map(td => td.textContent.trim());
+        if (photoIndex !== -1) tds.splice(photoIndex, 1);
+        data.push(tds);
+      });
+
+      // Export using SheetJS
+      const ws = XLSX.utils.aoa_to_sheet(data);
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, 'Прайс');
+      XLSX.writeFile(wb, 'price.xlsx');
+    });
+  }
 });
 </script></body>
 </html>
