--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@ tr.new-item td:first-child::before { content: "Новинка "; color: #047857;
 <td class="price">8990</td>
 <td class="promo">5990</td>
 <td class="imgcell">
-<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/f63/6m5m40vq6dwhfl92xzu5vyib7jz14uuu/art.-66026-Ultra-Bio-411.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/5ae/7ukc1ycsa41hr2w8422dbvbztwqu8hrc/66026_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
 </td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/geyzer_ultra_bio_411_dlya_myagkoy_vody/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
@@ -1278,7 +1278,7 @@ tr.new-item td:first-child::before { content: "Новинка "; color: #047857;
 <td class="price">8990</td>
 <td class="promo">5990</td>
 <td class="imgcell">
-<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/f54/g3thqkul4yz2j083if2nw50o8jr37ka7/art.-11042-Ultra-Bio-421.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/367/0su78y12jc1bu8zncalrw1w9dr3bkf0n/11042_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
 </td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/geyzer_ultra_bio_421_dlya_zhestkoy_vody/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
@@ -1314,7 +1314,7 @@ tr.new-item td:first-child::before { content: "Новинка "; color: #047857;
 <td>60</td>
 <td class="price">9490</td>
 <td class="promo">6340</td>
-<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/6e7/IMG_2804_kran.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/013/3gbgzjmcxiiiwk3eikihjx3pf6gcq92k/16018_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/geyzer_ultra_bio_431_dlya_ochen_zhestkoy_vody/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 <tr class="subcat">
