Update PROMO HEAD index.html

--- a/index.html
+++ b/index.html
@@ -437,8 +437,17 @@ tr.new-item td:first-child::before { content: "Новинка "; color: #047857;
 </div>
 <div class="group"><input id="onlyPromoExcel" type="checkbox"/><label for="onlyPromoExcel">Только акции (Excel)</label></div></div>
 <div class="container">
-<h2>тел./факс +7 (812) 605-00-55</h2>
-<h2>e-mail: office@geizer.com, http://www.geizer.com</h2>
+<h2>
+  тел./факс (общий) 
+  <a href="tel:+78126050055">+7 (812) 605-00-55</a>
+</h2>
+<h2>
+  <a href="http://www.geizer.com" target="_blank">www.geizer.com</a>
+</h2>
+<h2>
+  Вопросы, пожелания, обратная связь по прайсу — 
+  <a href="mailto:zaa@geizer.com">zaa@geizer.com</a> Алексей Жуков
+</h2>
 <div class="tblwrap">
 <table class="price">
 <thead><tr><th>Артикул</th><th>НАИМЕНОВАНИЕ</th><th>Описание</th><th>упак., шт.</th><th>палета, шт.</th><th>ЦЕНА, руб. с НДС 20%</th><th>АКЦИЯ, руб.</th><th class="imgcol">Фото</th><th>Карточка товара</th></tr></thead>
