--- a/index.html
+++ b/index.html
@@ -10104,8 +10104,8 @@
 							<td>RO, пластиковый бак 12 л, Механика, Карбон Блок, Посткарбон, без крана</td>
 							<td>1</td>
 							<td>40</td>
-							<td class="price">10490</td>
-							<td></td>
+							<td class="price price old">10490</td>
+							<td class="promo">7290</td>
 							<td class="imgcell">
 								<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/ce4/2ov6xaptp7wisw3jhcyr1fn2ip3uqdjd/20068_2.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" />
 							</td>
