--- a/index.html
+++ b/index.html
@@ -1495,6 +1495,24 @@
 							<td class="imgcell"></td>
 							<td></td>
 						</tr>
+						<tr tr class="new-item">
+							<td>20005</td>
+							<td>Гейзер-Прогресс</td>
+							<td>1600 gpd, кран, без помпы, без бака</td>
+							<td>1</td>
+							<td>80</td>
+							<td class="price">27900</td>
+							<td></td>
+							<td class="imgcell">
+								<img
+									alt=""
+									loading="lazy"
+									src="https://shop.geizer.com/upload/iblock/a1c/9mdntr9rjoiuugmpyj8q7u4v48f20igz/Progress1_kran.jpg"
+									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
+								/>
+							</td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/obratnyy_osmos/filtr_progress/" rel="noopener" target="_blank">перейти</a></td>
+						</tr>
 						<tr>
 							<td>20005</td>
 							<td>Гейзер-Престиж-2</td>
