--- a/index.html
+++ b/index.html
@@ -645,12 +645,12 @@
 						</tr>
 						<tr>
 							<td>62046</td>
-							<td>Мини</td>
+							<td>Мини (акция - белый) </td>
 							<td>2,5 л, синий, зел., сиреневый, модуль 301, фильтр-кувшин универсальный</td>
 							<td>12</td>
 							<td>252</td>
 							<td class="price">579</td>
-							<td class="promo promo">376</td>
+							<td class="promo promo">497</td>
 							<td class="imgcell">
 								<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/dd5/qhdnfe78tiamwkfq1oqz7yx04bb5ihg4/IMG_8327.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" />
 							</td>
