--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
 						</tr>
 						<tr>
 							<td>62042</td>
-							<td>Аквилон</td>
+							<td>Аквилон (коробка на английском)</td>
 							<td>3,0 л, синий, зел., сиреневый, модуль 501, фильтр-кувшин универсальный</td>
 							<td>6</td>
 							<td>144</td>
