--- a/index.html
+++ b/index.html
@@ -3312,7 +3312,7 @@
 						</tr>
 						<tr>
 							<td>30632</td>
-							<td>БАФ</td>
+							<td>БАФ 10SL</td>
 							<td>универсальный</td>
 							<td>20</td>
 							<td>480</td>
@@ -3323,7 +3323,7 @@
 						</tr>
 						<tr>
 							<td>30608</td>
-							<td>БС</td>
+							<td>БС 10SL</td>
 							<td>для умягчения воды (ионообменная смола)</td>
 							<td>20</td>
 							<td>480</td>
@@ -3331,6 +3331,17 @@
 							<td></td>
 							<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/eb5/IMG_3814.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
 							<td><a class="urla" href="https://shop.geizer.com/catalog/umyagchayushchie_kartridzhi_1/kartridzh_bs_10sl/" rel="noopener" target="_blank">перейти</a></td>
+						</tr>
+							<tr>
+							<td>30608</td>
+							<td>Комби ПРО 10SL </td>
+							<td>для умягчения воды (ионообменная смола)</td>
+							<td>20</td>
+							<td>480</td>
+							<td class="price">990</td>
+							<td></td>
+							<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/e3a/ecq9jek2ozgoje2op7q821yt8323devq/250_250_2/CU_10SL.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/?ysclid=m4v0xkdhy9864639844&digiSearch=true&term=%D0%BA%D0%BE%D0%BC%D0%B1%D0%B8%20%D0%BF%D1%80%D0%BE&params=%7Csort%3DDEFAULT" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
 						<tr>
 							<td>30600</td>
