--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,24 @@
 							</td>
 							<td><a class="urla" href="https://shop.geizer.com/catalog/obratnyy_osmos/geyzer_vivo/" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
+								<tr class="new-item">
+							<td>20070</td>
+							<td>Гейзер Vivo 2.0</td>
+							<td>мембрана 1600gpd, мет. корпус, без помпы, кран</td>
+							<td>1</td>
+							<td>30</td>
+							<td class="price">27 990</td>
+							<td></td>
+							<td class="imgcell">
+								<img
+									alt=""
+									loading="lazy"
+									src="https://shop.geizer.com/upload/iblock/4d2/2mqssftf23welmuqx1v93v0wocdrtlgp/20070_Geyzer-Vivo-2.0_kran.jpg"
+									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
+								/>
+							</td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/obratnyy_osmos/filtr_geyzer_vivo_2_0/" rel="noopener" target="_blank">перейти</a></td>
+						</tr>
 						<tr>
 							<td>20062</td>
 							<td>Престиж Про 600</td>
