--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,25 @@ label:has(#showNewOnly),
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
-							<td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/geyzer_bio_311_dlya_myagkoy_vody/" rel="noopener" target="_blank">перейти</a></td>
+							<td><a class="urla" href="https://shop.geizer.com/upload/iblock/8d0/588ihmo0lhvhb6juebaxovkoi5pdywc6/66024_1.jpg" rel="noopener" target="_blank">перейти</a></td>
+						</tr>
+								<tr>
+							<td>66029</td>
+							<td>Гейзер Био 311 без крана</td>
+							<td>мех+Арагон М-Био+В+Fiber Pro; JG, белые корпуса, без крана</td>
+							<td>2</td>
+							<td>60</td>
+							<td class="price">6790</td>
+							<td></td>
+							<td class="imgcell">
+								<img
+									alt=""
+									loading="lazy"
+									src="https://shop.geizer.com/upload/iblock/1c5/74salt3hb3rrvjnzsladanh7lj54gn2b/66024_2.jpg"
+									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
+								/>
+							</td>
+							<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
 						<tr>
 							<td>66025</td>
