--- a/index.html
+++ b/index.html
@@ -1285,8 +1285,8 @@ label:has(#showNewOnly),
 							<td>мех+Арагон М-Био+В+Fiber Pro; JG, кран, белые корпуса</td>
 							<td>2</td>
 							<td>60</td>
-							<td class="price">7790</td>
-							<td></td>
+							<td class="price price old">7790</td>
+							<td class="promo">5790</td>
 							<td class="imgcell">
 								<img
 									alt=""
@@ -1295,7 +1295,7 @@ label:has(#showNewOnly),
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
-							<td><a class="urla" href="https://shop.geizer.com/upload/iblock/8d0/588ihmo0lhvhb6juebaxovkoi5pdywc6/66024_1.jpg" rel="noopener" target="_blank">перейти</a></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/geyzer_bio_311_dlya_myagkoy_vody/" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
 								<tr>
 							<td>66029</td>
