--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@ label:has(#showNewOnly),
 								<img
 									alt=""
 									loading="lazy"
-									src="https://shop.geizer.com/upload/iblock/0f7/131ttgeo3wl5t5bj0xab4c7mw1wepb2v/art.-66024-Bio-311.jpg"
+									src="https://shop.geizer.com/upload/iblock/8d0/588ihmo0lhvhb6juebaxovkoi5pdywc6/66024_1.jpg"
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
