Update index.html (фото)

--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@ label:has(#showNewOnly),
 								<img
 									alt=""
 									loading="lazy"
-									src="https://shop.geizer.com/upload/iblock/6c6/fd9oepwq40u882tzbfufm3cxlywb6htf/art.-66025-Bio-312-_1_.jpg"
+									src="https://shop.geizer.com/upload/iblock/161/17xjqlu1fqeruhqaofetkb7x0hwad7o8/66025_1.png"
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
@@ -1376,7 +1376,7 @@ label:has(#showNewOnly),
 							<td>60</td>
 							<td class="price">6590</td>
 							<td></td>
-							<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/6f2/IMG_2873.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/2e4/f9yznt4b0nhbrte9grigi2hjj300dxbv/11067_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
 							<td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/filtr_geyzer_3_bio_321_bez_krana/" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
 						<tr>
@@ -1391,7 +1391,7 @@ label:has(#showNewOnly),
 								<img
 									alt=""
 									loading="lazy"
-									src="https://shop.geizer.com/upload/iblock/0b6/1bpof2b06vwgrdagsq8869gyj833a9ag/art.-11040-Bio-321.jpg"
+									src="https://shop.geizer.com/upload/iblock/692/4e0ud5zcd9mglgw3186drfgo3zbzq8ug/11040_1.jpg"
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
@@ -1409,7 +1409,7 @@ label:has(#showNewOnly),
 								<img
 									alt=""
 									loading="lazy"
-									src="https://shop.geizer.com/upload/iblock/8c2/mmv9bdt7axemqwgq84vr2ki3159dlvuz/art.-11041-Bio-322-_1_.jpg"
+									src="https://shop.geizer.com/upload/iblock/ede/vok05pdg0z44hv2o1k6cpkympk21c6n8/11041_1.png"
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
@@ -1493,7 +1493,7 @@ label:has(#showNewOnly),
 								<img
 									alt=""
 									loading="lazy"
-									src="https://shop.geizer.com/upload/iblock/d72/e4gko6d2uj3my8k066m337w9c48jyd3q/art.-18050-Bio-341.jpg"
+									src="https://shop.geizer.com/upload/iblock/329/t5q8xc6dpirgo0nqeuswpb03st69ngcl/18050_1.jpg"
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
