Update index.html ссылка на био без крана

--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ label:has(#showNewOnly),
 									style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"
 								/>
 							</td>
-							<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/filtr_3_bio_311_dlya_myagkoy_vody_bez_krana/" rel="noopener" target="_blank">перейти</a></td>
 						</tr>
 						<tr>
 							<td>66025</td>
