Update index.html чехлы неопрен добавление

--- a/index.html
+++ b/index.html
@@ -6362,6 +6362,33 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td class="imgcell"></td>
 <td></td>
 </tr>
+
+<tr class="new-item">
+<td>25481</td>
+<td>Чехол неопрен корпус пластик 10ВВ</td>
+<td>для синих и прозрачных корпусов 10ВВ</td>
+<td>1</td>
+<td></td>
+<td class="price">1840</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/1cf/tcayut1h667frmwti83mvibazc3yqacv/24481_10BB.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/antikondensatnye_chekhly/chekhol_neopren_korpus_plastik_10vv/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+<tr class="new-item">
+<td>25482</td>
+<td>Чехол неопрен корпус пластик 20ВВ</td>
+<td>для синих и прозрачных корпусов 20ВВ</td>
+<td>1</td>
+<td></td>
+<td class="price">2240</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/e48/ixh0w11laq7archsc1g5w6cra5098cdb/25482_20BB.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/antikondensatnye_chekhly/chekhol_neopren_korpus_plastik_20vv/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+
+
 <tr>
 <td>25512</td>
 <td>Чехол для Гейзер-Тайфун 10SL с лого</td>
