Update index.html new_Vontron

--- a/index.html
+++ b/index.html
@@ -5609,6 +5609,56 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td><a class="urla" href="https://shop.geizer.com/catalog/membrany_obratnoosmoticheskie/membrana_aquaporin_twro_1812_175_gpd/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 <tr>
+
+<tr class "new item">
+<td>28508</td>
+<td>Мембрана ULP3012 - 300 GPD - Vontron</td>
+<td>ULP 3012-300 gpd</td>
+<td>25</td>
+<td></td>
+<td class="price">3470</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+<tr class "new item">
+<td>28437</td>
+<td>Мембрана ULP3012 - 400 GPD - Vontron</td>
+<td>ULP 3012-400 gpd</td>
+<td>25</td>
+<td></td>
+<td class="price">3690</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+<tr class "new item">
+<td>28456</td>
+<td>Мембрана ULP3012 - 600 GPD - Vontron</td>
+<td>ULP 3012-600 gpd</td>
+<td>25</td>
+<td></td>
+<td class="price">4270</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+<tr class "new item">
+<td>28583</td>
+<td>Мембрана ULP3012 - 600 GPD - Vontron</td>
+<td>ULP 3413-1400 gpd</td>
+<td>25</td>
+<td></td>
+<td class="price">8990</td>
+<td></td><td class="bf"></td>
+<td class="imgcell"><img alt="" loading="lazy" src="" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
+<td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+
+<tr>
 <td>28555</td>
 <td>мембрана Гейзер 1600 gpd</td>
 <td>размер 3413</td>
