Update index.html VONTRON NEW VOL 2

--- a/index.html
+++ b/index.html
@@ -5610,7 +5610,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 </tr>
 <tr>
 
-<tr class "new item">
+<tr class="new-item">
 <td>28508</td>
 <td>Мембрана ULP3012 - 300 GPD - Vontron</td>
 <td>ULP 3012-300 gpd</td>
@@ -5622,7 +5622,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 
-<tr class "new item">
+<tr class="new-item">
 <td>28437</td>
 <td>Мембрана ULP3012 - 400 GPD - Vontron</td>
 <td>ULP 3012-400 gpd</td>
@@ -5634,7 +5634,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 
-<tr class "new item">
+<tr class="new-item">
 <td>28456</td>
 <td>Мембрана ULP3012 - 600 GPD - Vontron</td>
 <td>ULP 3012-600 gpd</td>
@@ -5646,7 +5646,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td><a class="urla" href="" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 
-<tr class "new item">
+<tr class="new-item">
 <td>28583</td>
 <td>Мембрана ULP3012 - 600 GPD - Vontron</td>
 <td>ULP 3413-1400 gpd</td>
