--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 				Вопросы, пожелания, обратная связь по прайсу —
 				<a href="mailto:zaa@geizer.com">zaa@geizer.com</a> Алексей Жуков
 			</h2>
+						<a class="btn" href="https://waterprofff.github.io/PROM/" target="_blank">Перейти в промышленный прайс</a>
 <div class="tblwrap">
 <table class="price">
 <thead>
