--- a/index.html
+++ b/index.html
@@ -11411,6 +11411,8 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 })();
 </script>
+	<script src="./js/price-byt.js" defer></script>
+
 -->
 </body>
 </html>
