--- a/index.html
+++ b/index.html
@@ -1263,6 +1263,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>2</td>
 <td>60</td>
 <td class="price">7790</td>
+<td class="promo">6590</td>	
 <td></td><td class="bf">6590</td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/8d0/588ihmo0lhvhb6juebaxovkoi5pdywc6/66024_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
@@ -1276,6 +1277,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>2</td>
 <td>60</td>
 <td class="price">6790</td>
+	<td class="promo">5770</td>
 <td></td><td class="bf"></td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/1c5/74salt3hb3rrvjnzsladanh7lj54gn2b/66024_2.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
@@ -1337,6 +1339,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>2</td>
 <td>60</td>
 <td class="price">6590</td>
+	<td class="promo">5590</td>
 <td></td><td class="bf">5 590</td>
 <td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/2e4/f9yznt4b0nhbrte9grigi2hjj300dxbv/11067_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/filtry_pod_moyku/filtr_geyzer_3_bio_321_bez_krana/" rel="noopener" target="_blank">перейти</a></td>
@@ -1348,6 +1351,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>2</td>
 <td>60</td>
 <td class="price">7590</td>
+	<td class="promo">6390</td>
 <td></td><td class="bf">6 390</td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/692/4e0ud5zcd9mglgw3186drfgo3zbzq8ug/11040_1.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
@@ -9557,7 +9561,8 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>Аквасофт Смарт, Арагон Макс Био Смарт, Посткарбон Ag, кран</td>
 <td>4</td>
 <td>72</td>
-<td class="price">5790</td>
+<td class="price price old">5790</td>
+<td class="promo">3740</td><td class="bf"></td>
 <td></td><td class="bf">3 740</td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/2b6/2w3d05ep7zp4ycq3k09izla4spfny3xh/art.-16045-Optima-Maks-Bio.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
@@ -9570,7 +9575,8 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>Аквасофт Смарт, Арагон Макс Био Смарт, Посткарбон Ag, без крана</td>
 <td>4</td>
 <td>72</td>
-<td class="price">4790</td>
+<td class="price price old">4790</td>
+<td class="promo">3390</td><td class="bf"></td>
 <td></td><td class="bf">3 390</td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/823/b8gy3suit8unieozqb69xovr1qr9me5n/IMG_7670.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
@@ -9827,7 +9833,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td>RO, пластиковый бак 12 л, Механика, Карбон Блок, Посткарбон, без крана</td>
 <td>1</td>
 <td>40</td>
-<td class="price price old">10490</td>
+<td class="price old">10490</td>
 <td class="promo">7290</td><td class="bf"></td>
 <td class="imgcell">
 <img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/ce4/2ov6xaptp7wisw3jhcyr1fn2ip3uqdjd/20068_2.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
